tests/cases_invalid/misc/struct_field/.expected
error: could not find `invalid` field in `Level1` type
  --> ./cases_invalid/misc/struct_field/main.shd:14:23
   |
14 |     var val1 = buffer.invalid;
   |                       ^^^^^^^ undefined field
   |

error: could not find `invalid` field in `Level2` type
  --> ./cases_invalid/misc/struct_field/main.shd:15:29
   |
15 |     var val2 = buffer.child.invalid;
   |                             ^^^^^^^ undefined field
   |

error: could not find `invalid` field in `Level1` type
  --> ./cases_invalid/misc/struct_field/main.shd:20:25
   |
20 |     var val1 = variable.invalid;
   |                         ^^^^^^^ undefined field
   |

error: could not find `invalid` field in `Level2` type
  --> ./cases_invalid/misc/struct_field/main.shd:21:31
   |
21 |     var val2 = variable.child.invalid;
   |                               ^^^^^^^ undefined field
   |

error: could not find `invalid` field in `Level1` type
  --> ./cases_invalid/misc/struct_field/main.shd:25:22
   |
25 |     var val1 = param.invalid;
   |                      ^^^^^^^ undefined field
   |

error: could not find `invalid` field in `Level2` type
  --> ./cases_invalid/misc/struct_field/main.shd:26:28
   |
26 |     var val2 = param.child.invalid;
   |                            ^^^^^^^ undefined field
   |
